# wado

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ISSUES.md  README.md  REVIEW.md  build.rs  install.sh  my-topology.yml  release.sh  release.toml  unrelease.sh
.github/: dependabot.yml
.github/workflows/: nightly.yml  release.yml  verify.yml
completions/: README.md  _waco  _waco.ps1  _wado  _wado.diff  _wado.ps1  _wfadm  _wfadm.ps1  waco.bash  waco.elv  waco.fish  wado.bash  wado.bash.diff  wado.elv  wado.fish  wado.fish.diff  wfadm.bash  wfadm.elv  wfadm.fish
npm/wado-darwin-arm64/: README.md  package.json
npm/wado-darwin-x64/: README.md  package.json
npm/wado-linux-x64/: README.md  package.json
npm/wado-win32-x64/: README.md  package.json
src/: app.rs  args.rs  build.rs  cli.rs  command.rs  completion.rs  completions.rs  console.rs  constants.rs  container.rs  container_completion.rs  dc.rs  error.rs  hc.rs  healthcheck.rs  image.rs  json.rs  label.rs  lib.rs  main.rs  podman.rs  progress.rs  ps.rs  push.rs  resources.rs  standalone.rs  topology.rs  topology_model.rs  wildfly.rs  wildfly_version.rs
src/command/: cli.rs  console.rs  dc.rs  hc.rs  images.rs  lifecycle.rs  mod.rs  ps.rs  push.rs  standalone.rs  update.rs  versions.rs
src/command/topology/: mod.rs  model.rs  start.rs  stop.rs
src/completion/: container.rs  mod.rs  version.rs
src/container/: command.rs  completion.rs  lifecycle.rs  mod.rs  query.rs  resolve.rs  runtime.rs
src/dev/: mod.rs  task.rs
src/topology/: start.rs
src/wildfly/: admin_container.rs  admin_image.rs  instance.rs  management.rs  mod.rs  server.rs  server_type.rs  start.rs  start_spec.rs
testdata/: wildfly-images.toml
