[package]
name = "wado"
version = "0.2.8"
authors = ["Harald Pehl <harald.pehl@gmail.com>"]
edition = "2024"
description = "Command line tool to manage WildFly containers."
readme = "README.md"
homepage = "https://github.com/hpehl/wado"
repository = "https://github.com/hpehl/wado"
license = "Apache-2.0"
keywords = ["cli", "WildFly", "admin", "image", "container"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["cargo"] }
comfy-table = "7.2.1"
console = "0.16.2"
futures = "0.3.31"
handlebars = "6.4.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
lazy_static = "1.5.0"
regex = "1.12.2"
reqwest = "0.12.24"
semver = "1.0.27"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
webbrowser = "1.0.6"
which = "8.0.0"
wildfly_container_versions = "0.2.6"

[build-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["cargo"] }
clap_complete = "4.5.60"
diffy = "0.4.2"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true

[lib]
name = "wado"
path = "src/lib.rs"

[[bin]]
name = "wado"
