[package]
name = "wado"
version = "0.6.6"
authors = ["Harald Pehl <harald.pehl@gmail.com>"]
edition = "2024"
description = "Command line tool to manage WildFly containers."
readme = "README.md"
homepage = "https://github.com/hpehl/wado"
repository = "https://github.com/hpehl/wado"
license = "Apache-2.0"
keywords = ["cli", "WildFly", "admin", "image", "container"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["cargo"] }
clap_complete = { version = "4.6.4", features = ["unstable-dynamic"] }
comfy-table = "7.2.2"
console = "0.16.3"
futures = "0.3.32"
handlebars = "6.4.0"
indicatif = { version = "0.18.4", features = ["rayon"] }
lazy_static = "1.5.0"
regex = "1.12.4"
reqwest = "0.13.4"
semver = "1.0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.27"
thiserror = "2"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
webbrowser = "1.2.0"
which = "8.0.3"
wildfly_meta = "0.7.1"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
[[bin]]
name = "wado"
